Fix plenty of duplicate symbols and other errors/warnings in tests
Now, if only they could pass...

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -55,7 +55,7 @@ files_check_LDADD = ../src/tools/libjunkietools.la -lm
 hash_check_SOURCES = hash_check.c
 hash_check_LDADD = ../src/tools/libjunkietools.la -lm
 liner_check_SOURCES = liner_check.c
-liner_check_LDADD = ../src/tools/libjunkietools.la -lm
+liner_check_LDADD = ../src/tools/libjunkietools.la ../src/proto/libproto.la -lm
 ip_addr_check_SOURCES = ip_addr_check.c
 ip_addr_check_LDADD = ../src/tools/libjunkietools.la -lm
 log_check_SOURCES = log_check.c
