--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,13 +36,15 @@ dist_check_SCRIPTS = \
 
 TESTS = $(check_PROGRAMS) $(dist_check_SCRIPTS)
 
-TESTS_ENVIRONMENT = \
+AM_TESTS_ENVIRONMENT = \
 	EF_ALLOW_MALLOC_0=1 \
 	GUILE_LOAD_PATH=$(top_srcdir)/guile \
 	GUILE_LOAD_COMPILED_PATH=$(top_srcdir)/guile \
 	GUILE_AUTO_COMPILE=0 \
 	GUILE_WARN_DEPRECATED=no \
-	NETMATCH_CPPFLAGS="$(AM_CPPFLAGS) @GUILE_CFLAGS@ -I$(top_srcdir)/include"
+	NETMATCH_CPPFLAGS="$(AM_CPPFLAGS) @GUILE_CFLAGS@ -I$(top_srcdir)/include";
+
+TEST_EXTENSIONS = .test .scm
 
 #LDFLAGS += -lefence
 
