Automatically load the plugin named in argv[0]
Closes #1

--- a/plugins/arpgraph/Makefile.am
+++ b/plugins/arpgraph/Makefile.am
@@ -6,3 +6,5 @@ pkglib_LTLIBRARIES = arpgraph.la
 arpgraph_la_SOURCES = arpgraph.c
 arpgraph_la_LDFLAGS = -module -avoid-version
 
+install-exec-local:
+	-ln -s $(bindir)/junkie $(bindir)/arpgraph
