--- a/plugins/duplicogram/Makefile.am
+++ b/plugins/duplicogram/Makefile.am
@@ -6,3 +6,5 @@ pkglib_LTLIBRARIES = duplicogram.la
 duplicogram_la_SOURCES = duplicogram.c
 duplicogram_la_LDFLAGS = -module -avoid-version
 
+install-exec-local:
+	-ln -s $(bindir)/junkie $(bindir)/duplicogram
