--- a/plugins/packetogram/Makefile.am
+++ b/plugins/packetogram/Makefile.am
@@ -6,3 +6,5 @@ pkglib_LTLIBRARIES = packetogram.la
 packetogram_la_SOURCES = packetogram.c
 packetogram_la_LDFLAGS = -module -avoid-version
 
+install-exec-local:
+	-ln -s $(bindir)/junkie $(bindir)/packetogram
