Optimize httper with a prefix tree
Still should compress that tree into a single array of nodes.

--- a/include/junkie/tools/Makefile.in
+++ b/include/junkie/tools/Makefile.in
@@ -313,6 +313,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 thisincludedir = $(pkgincludedir)/tools
 thisinclude_HEADERS = \
+	radix_tree.h \
 	ext.h \
 	mutex.h \
 	files.h \
